samples/_failures_safe/1761786301_efb77e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55ae941e.c: In function ‘main’:
./samples/SAFE/__tmp_55ae941e.c:143:5: error: ‘print_’ undeclared (first use in this function); did you mean ‘printf’?
  143 |     print_
      |     ^~~~~~
      |     printf
./samples/SAFE/__tmp_55ae941e.c:143:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_55ae941e.c:143:11: error: expected ‘;’ at end of input
  143 |     print_
      |           ^
      |           ;
./samples/SAFE/__tmp_55ae941e.c:143:5: error: expected declaration or statement at end of input
  143 |     print_
      |     ^~~~~~
